[tool.poetry]
name = "branch-prefix"
version = "0.1.0"
description = "Add prefix to branch names"
authors = ["Jad Haddad <jad.haddad92@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
GitPython = "^3.1.29"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[tool.poetry.scripts]
branch-prefix = "branch_prefix.main:check_branch_name"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
